--- a/PictureAnalyzer/PictureAnalyzer.csproj
+++ b/PictureAnalyzer/PictureAnalyzer.csproj
@@ -202,18 +202,29 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DAL\PictureAnalyzerContext.cs" />
+    <Compile Include="DAL\PictureAnalyzerInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Color.cs" />
+    <Compile Include="Models\Gallery.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Influence.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Painter.cs" />
+    <Compile Include="Models\Painting.cs" />
+    <Compile Include="Models\Profile.cs" />
+    <Compile Include="Models\Type.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="DatabaseDiagram\ClassDiagram.png" />
+    <Content Include="DatabaseDiagram\NewClassDiagram.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
