--- a/PictureAnalyzer/Web.config
+++ b/PictureAnalyzer/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PictureAnalyzer-20170905015814.mdf;Initial Catalog=aspnet-PictureAnalyzer-20170905015814;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="PictureAnalyzerContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDBFilename=|DataDirectory|\PictureAnalyzer.mdf;Initial Catalog=PictureAnalyzer1;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -85,9 +87,14 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="PictureAnalyzer.DAL.PictureAnalyzerContext, PictureAnalyzer">
+        <databaseInitializer type="PictureAnalyzer.DAL.PictureAnalyzerInitializer, PictureAnalyzer" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
