Finished migrations, added seeder, added controller&view for painters

--- a/PictureAnalyzer/Web.config
+++ b/PictureAnalyzer/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PictureAnalyzer-20170905015814.mdf;Initial Catalog=aspnet-PictureAnalyzer-20170905015814;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="PictureAnalyzerContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDBFilename=|DataDirectory|\PictureAnalyzer.mdf;Initial Catalog=PictureAnalyzer1;Integrated Security=True;"
+    <add name="PictureAnalyzerContext" connectionString="Data Source=(LocalDb)\v11.0;AttachDBFilename=|DataDirectory|\PictureAnalyzer.mdf;Initial Catalog=PictureAnalyzer;Integrated Security=True;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
