--- a/PictureAnalyzer/PictureAnalyzer.csproj
+++ b/PictureAnalyzer/PictureAnalyzer.csproj
@@ -202,10 +202,15 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PaintersController.cs" />
     <Compile Include="DAL\PictureAnalyzerContext.cs" />
     <Compile Include="DAL\PictureAnalyzerInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709052015031_NewMigration.cs" />
+    <Compile Include="Migrations\201709052015031_NewMigration.Designer.cs">
+      <DependentUpon>201709052015031_NewMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -280,6 +285,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Painters\Create.cshtml" />
+    <Content Include="Views\Painters\Delete.cshtml" />
+    <Content Include="Views\Painters\Details.cshtml" />
+    <Content Include="Views\Painters\Edit.cshtml" />
+    <Content Include="Views\Painters\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -296,6 +306,11 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201709052015031_NewMigration.resx">
+      <DependentUpon>201709052015031_NewMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
