Fixed up DateTime conversion error

--- a/PictureAnalyzer/PictureAnalyzer.csproj
+++ b/PictureAnalyzer/PictureAnalyzer.csproj
@@ -208,9 +208,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201709052015031_NewMigration.cs" />
-    <Compile Include="Migrations\201709052015031_NewMigration.Designer.cs">
-      <DependentUpon>201709052015031_NewMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201709052043513_MyMig.cs" />
+    <Compile Include="Migrations\201709052043513_MyMig.Designer.cs">
+      <DependentUpon>201709052043513_MyMig.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -308,8 +308,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201709052015031_NewMigration.resx">
-      <DependentUpon>201709052015031_NewMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201709052043513_MyMig.resx">
+      <DependentUpon>201709052043513_MyMig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
